[project]
name = "simple-opt-expl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.2",
    "evosax>=0.2.0",
    "flax>=0.12.1",
    "jax>=0.8.1",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "small-world",
    "tyro>=0.9.35",
    "wandb>=0.23.1",
]

[tool.uv.workspace]
members = [
    "small-world",
]

[tool.uv.sources]
small-world = { workspace = true }


[tool.ruff.lint]
ignore = ["F722"]
